--- a/MongoDB/MongoDB.csproj
+++ b/MongoDB/MongoDB.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MongoDB.ManipulandoClassesExternas</StartupObject>
+    <StartupObject>MongoDB.IncluindoMuitosLivros</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson, Version=2.4.4.0, Culture=neutral, processorArchitecture=MSIL">
@@ -62,11 +62,13 @@
   <ItemGroup>
     <Compile Include="acessandoMongoDb.cs" />
     <Compile Include="conectandoMongoDB.cs" />
+    <Compile Include="IncluindoMuitosLivros.cs" />
     <Compile Include="Livro.cs" />
     <Compile Include="manipulandoClasses.cs" />
     <Compile Include="ManipulandoClassesExternas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="usandoValoresLivros.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
