Listando livros usando como filtro a classe

--- a/MongoDB/MongoDB.csproj
+++ b/MongoDB/MongoDB.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MongoDB.listandoDocFiltroBson</StartupObject>
+    <StartupObject>MongoDB.listandoDocFiltroClasse</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson, Version=2.4.4.0, Culture=neutral, processorArchitecture=MSIL">
@@ -64,6 +64,7 @@
     <Compile Include="conectandoMongoDB.cs" />
     <Compile Include="IncluindoMuitosLivros.cs" />
     <Compile Include="listandoDocFiltroBson.cs" />
+    <Compile Include="listandoDocFiltroClasse.cs" />
     <Compile Include="listandoDocs.cs" />
     <Compile Include="Livro.cs" />
     <Compile Include="manipulandoClasses.cs" />
